--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CosmosDB\CosmosDB.csproj" />
     <ProjectReference Include="..\Functions\Functions.csproj" />
     <ProjectReference Include="..\Redis.Cache\Redis.Cache.csproj" />
     <ProjectReference Include="..\ServiceBus\ServiceBus.csproj" />
