--- a/CosmosDB/CosmosDB.csproj
+++ b/CosmosDB/CosmosDB.csproj
@@ -5,8 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.1.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.7.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Gremlin\" />
+    <Folder Include="Cassandra\" />
+    <Folder Include="Table\" />
   </ItemGroup>
 
 </Project>
