--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CosmosDB\CosmosDB.csproj" />
     <ProjectReference Include="..\Functions\Functions.csproj" />
     <ProjectReference Include="..\Redis.Cache\Redis.Cache.csproj" />
