--- a/ServiceBus/ServiceBus.csproj
+++ b/ServiceBus/ServiceBus.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utils\Utils.csproj" />
+  </ItemGroup>
+
 </Project>
