--- a/ServiceBus/ServiceBus.csproj
+++ b/ServiceBus/ServiceBus.csproj
@@ -10,6 +10,9 @@
     <PackageLicenseUrl>https://github.com/JDSRAO/Azure.Solutions/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/JDSRAO/Azure.Solutions/tree/master/ServiceBus</PackageProjectUrl>
     <RepositoryUrl>https://github.com/JDSRAO/Azure.Solutions</RepositoryUrl>
+    <PackageIconUrl></PackageIconUrl>
+    <RepositoryType>github</RepositoryType>
+    <Description>Azure service bus helpers to ease the development</Description>
   </PropertyGroup>
 
   <ItemGroup>
